--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-google-maps": "~2.0.12"
+    "angular-google-maps": "~2.0.12",
+    "chartist": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
